Upgrade to java 10